--- a/templates/stuff.tmpl
+++ b/templates/stuff.tmpl
@@ -5,10 +5,9 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script>
 $(document).ready(function() {
-    $("#search-btn").submit(function(event) {
+    $("#search-btn").click(function(event) {
         if(event) {
             event.preventDefault();
-            alert("/search?search=" + $("#search-field").val());
             window.location="/search?search=" + $("#search-field").val();
         }
     });
@@ -35,13 +34,13 @@ $(document).ready(function() {
       <ul class="nav navbar-nav">
         <li {{if $.IsActivePage 1}}class="active"{{end}}><a href="/trips">Trips</a></li>
         <li {{if $.IsActivePage 2}}class="active"{{end}}><a href="/people">People</a></li>
-        <li><a href="/stats">Stats</a></li>
+        <li {{if $.IsActivePage 3}}class="active"{{end}}><a href="/stats">Stats</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input id="search-field" type="text" class="form-control" placeholder="Search" value="{{$.SearchQuery}}"></input>
         </div>
-        <button id="search-btn" type="submit" class="btn btn-default">Submit</button>
+        <button id="search-btn" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
