--- a/templates/trip.tmpl
+++ b/templates/trip.tmpl
@@ -10,7 +10,7 @@
             <h1>{{$.TripInfo.StartString}} to {{$.TripInfo.EndString}}</h1>
             <h2>{{$.TripInfo.TripReason}}</h2>
             {{ range $i, $e := $.PeopleEntries }}
-                <h1><a href="/person?user_id={{$e.Person.UserId}}">{{$e.Person.Name}}</a></h1>
+                <h3><a href="/person?user_id={{$e.Person.UserId}}">{{$e.Person.Name}}{{if $e.Person.Nickname}} - {{$e.Person.Nickname}}{{end}}</a></h3>
                 <p>{{$e.Entry.Entry}}</p>
             {{ end }}
         </div>
