--- a/templates/search.tmpl
+++ b/templates/search.tmpl
@@ -9,9 +9,13 @@
         <div class="container">
             <h1>Search</h1>
             {{ range $i, $e := $.PeopleEntries }}
-                <h2>{{$e.Person.Name}}</h2>
-                <h3>{{$e.Entry.StartString}} to {{$e.Entry.EndString}}</h3>
-                <h4>{{$e.Entry.TripReason}}</h4>
+                <a href="/person?user_id={{$e.Person.UserId}}">
+                    <h2>{{$e.Person.Name}}</h2>
+                </a>
+                <a href="/trip?trip_id={{$e.Entry.TripId}}">
+                    <h3>{{$e.Entry.StartString}} to {{$e.Entry.EndString}}</h3>
+                    <h4>{{$e.Entry.TripReason}}</h4>
+                </a>
                 <p>{{$e.Entry.Entry}}</p>
             {{ end }}
         </div>
