--- a/templates/stuff.tmpl
+++ b/templates/stuff.tmpl
@@ -1,8 +1,11 @@
 {{define "header"}}
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="/jquery-ui-1.11.0/jquery-ui.min.css">
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="/jquery-ui-1.11.0/jquery-ui.min.js"></script>
 <script>
 $(document).ready(function() {
     $("#search-btn").click(function(event) {
@@ -35,16 +38,14 @@ $(document).ready(function() {
         <li {{if $.IsActivePage 1}}class="active"{{end}}><a href="/trips">Trips</a></li>
         <li {{if $.IsActivePage 2}}class="active"{{end}}><a href="/people">People</a></li>
         <li {{if $.IsActivePage 3}}class="active"{{end}}><a href="/stats">Stats</a></li>
+        <li {{if $.IsActivePage 4}}class="active"{{end}}><a href="/leaderboard">Leaderboard</a></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <input id="search-field" type="text" class="form-control" placeholder="Search" value="{{$.SearchQuery}}"></input>
         </div>
         <button id="search-btn" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
