--- a/templates/person.tmpl
+++ b/templates/person.tmpl
@@ -40,7 +40,7 @@
                     <h3>{{$e.StartString}} - {{$e.EndString}}</h3>
                     <h4>{{$e.TripReason}}</h4>
                 </a>
-                <p>{{$e.Entry}}</p>
+                <p>{{$e.EntryHtml}}</p>
             {{ end }}
         </div>
     </body>
